--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,5 +1,8 @@
 name: Publish
 
+permissions:
+  contents: write
+
 on:
   push:
     tags:
@@ -19,6 +22,6 @@ jobs:
       with:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
         file: addons/bad.multiplayer*
-        tag: ${{ github.ref }}
+        tag: v${{ github.ref }}
         overwrite: true
         file_glob: true
