--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,4 @@
-name: Publish
-
-permissions:
-  contents: write
+name: Release
 
 on:
   push:
@@ -10,18 +7,13 @@ on:
 
 jobs:
   build:
-    name: Publish BAD Multiplayer addon artifacts
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v4
-    - name: Build
-      run: cargo build --release
-    - name: Upload binaries to release
-      uses: svenstaro/upload-release-action@v2
+    - uses: actions/checkout@master
+    - name: Archive Release
+      uses: thedoctor0/zip-release@0.7.6
       with:
-        repo_token: ${{ secrets.GITHUB_TOKEN }}
-        file: addons/bad.multiplayer*
-        tag: v${{ github.ref }}
-        overwrite: true
-        file_glob: true
+        type: 'zip'
+        filename: 'bad.multiplayer-${{ github.ref }}.zip'
+        directory: 'addons'
+        path: 'bad.multiplayer'
