--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,6 +23,7 @@ jobs:
       uses: ncipollo/release-action@v1.18.0
       with:
         prerelease: true
+        skipIfReleaseExists: true
         tag: '${{ github.ref_name }}'
         artifacts: 'bad.multiplayer-${{ github.ref_name }}.zip'
         token: ${{ secrets.GITHUB_TOKEN }}
