--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,8 @@ jobs:
       uses: ncipollo/release-action@v1.18.0
       with:
         prerelease: true
+        removeArtifacts: true
+        skipIfReleaseExists: true
         artifacts: 'addons/bad.multiplayer'
         tag: '${{ github.ref_name }}'
         name: 'bad.multiplayer-${{ github.ref_name }}.zip'
