--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,4 +27,4 @@ jobs:
         if: github.ref_type == 'tag'
         with:
           prerelease: true
-          files: 'release.zip'
+          files: 'addons/release.zip'
