--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,7 @@ jobs:
         uses: thedoctor0/zip-release@0.7.6
         with:
           type: 'zip'
+          command: 'mkdir -p addons'
           filename: 'bad.multiplayer-${{ github.ref_name }}.zip'
           directory: 'addons'
           path: 'bad.multiplayer'
