--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ jobs:
         uses: thedoctor0/zip-release@0.7.6
         with:
           type: 'zip'
-          command: 'mkdir -p bad.multiplayer-${{ github.ref_name }}; cp -r addons/bad.multiplayer bad.multiplayer-${{ github.ref_name }}'
+          command: 'mkdir -p bad.multiplayer-${{ github.ref_name }}/addons; cp -r addons/bad.multiplayer bad.multiplayer-${{ github.ref_name }}/addons'
           filename: 'bad.multiplayer-${{ github.ref_name }}.zip'
           path: 'bad.multiplayer-${{ github.ref_name }}/addons/bad.multiplayer'
       - name: Release
